Add start html and css

--- a/index.html
+++ b/index.html
@@ -7,5 +7,34 @@
     <script defer src="main.js"></script>
     <title>Calculator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="calculator">
+      <div class="calculator__windows">
+        <div class="calculator__windows__history"></div>
+        <div class="calculator__windows__current"></div>
+      </div>
+      <div class="calculator__buttons">
+        <div class="buttons number">BCK</div>
+        <div class="buttons number">C</div>
+        <div class="buttons symbol">%</div>
+        <div class="buttons symbol">÷</div>
+        <div class="buttons number">7</div>
+        <div class="buttons number">8</div>
+        <div class="buttons number">9</div>
+        <div class="buttons symbol">*</div>
+        <div class="buttons number">4</div>
+        <div class="buttons number">5</div>
+        <div class="buttons number">6</div>
+        <div class="buttons symbol">-</div>
+        <div class="buttons number">1</div>
+        <div class="buttons number">2</div>
+        <div class="buttons number">3</div>
+        <div class="buttons symbol">+</div>
+        <div class="buttons number">0</div>
+        <div class="buttons decimal">.</div>
+        <div class="buttons equals">=</div>
+      </div>
+    </div>
+    <div class="history"></div>
+  </body>
 </html>
