Add save equation functionality

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </head>
   <body>
     <div class="calculator">
+      <h2>Calculator</h2>
       <div class="calculator__windows">
         <div class="calculator__windows__full-equation"></div>
         <i class="fa-solid fa-floppy-disk save"></i>
@@ -26,11 +27,11 @@
         <div class="buttons number">7</div>
         <div class="buttons number">8</div>
         <div class="buttons number">9</div>
-        <div class="buttons symbol">*</div>
+        <div class="buttons symbol">x</div>
         <div class="buttons number">4</div>
         <div class="buttons number">5</div>
         <div class="buttons number">6</div>
-        <div class="buttons symbol">/</div>
+        <div class="buttons symbol">÷</div>
         <div class="buttons number">1</div>
         <div class="buttons number">2</div>
         <div class="buttons number">3</div>
@@ -44,8 +45,8 @@
     </div>
     <div class="history">
       <h2>Saved Equation</h2>
-      <ul class="saved__equations">
-        <li class="equation">
+      <ul class="saved__equations" id="savedEquations">
+        <!-- <li class="equation">
           25 + 3 * 7 = 46 <i class="fa-sharp fa-solid fa-trash trash"></i>
         </li>
         <li class="equation">
@@ -55,7 +56,7 @@
           25 + 3 * 7 = 46 <i class="fa-sharp fa-solid fa-trash trash"></i>
         </li>
         <li class="equation">
-          25 + 3 * 7 = 46 <i class="fa-sharp fa-solid fa-trash trash"></i>
+          25 + 3 * 7 = 46 <i class="fa-sharp fa-solid fa-trash trash"></i> -->
         </li>
       </ul>
     </div>
